--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,10 +35,6 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-/* Activamos el display grid
-Definimos las areas como string 
-Luego definimos las columnas
-Luego definimos las filas*/
 .app {
   background: var(--bg-color-main);
   font-family: Arial, Helvetica, sans-serif;
@@ -48,8 +44,7 @@ Luego definimos las filas*/
   "contenido"
   "rodapie";
   grid-template-columns: auto;
-  /* grid-template-rows: encabezado contenido rodapie;        */
-  grid-template-rows: 50px 100vh auto;
+  grid-template-rows: 50px 100% auto;
 }
 
 .encabezado {
