Se agrega el menu del header, el footer con sus estilos.

--- a/assets/css/destacados.css
+++ b/assets/css/destacados.css
@@ -1,4 +1,5 @@
 .destaques {
+  width: calc(100% - .6rem);
   display: grid;
   grid-template-columns: 25% 25% 25% 25%;
   grid-template-rows: 33.3% 33.3% 33.3%;
