--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,26 +35,52 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+ul {
+  list-style: none;
+}
+
+li a {
+  text-decoration: none;
+}
+
 .app {
+  width: 100%;
   background: var(--bg-color-main);
   font-family: Arial, Helvetica, sans-serif;
   display: grid;
   grid-template-areas: 
   "encabezado"
   "contenido"
-  "rodapie";
+  "footer";
   grid-template-columns: auto;
-  grid-template-rows: 50px 100% auto;
+  grid-template-rows: auto 100% auto;
 }
 
 .encabezado {
   grid-area: encabezado;
+  padding: 1.5rem 2rem;
+  display: flex;
+  align-items: center;
+}
+
+.menu__link {
+  color: #333333;
+  padding: .5rem 1rem;
+}
+
+.menu__link:hover, .activo {
+  border-bottom: 3px solid #0073e6;
 }
 
 .contenido {
   grid-area: contenido;
+  padding: 0 2rem;
 }
 
-.rodapie {
-  grid-area: rodapie;
+.footer {
+  grid-area: footer;
+  background: #fdfdfd;
+  color: #333333;
+  padding: 1rem;
+  text-align: center;
 }
