--- a/assets/css/destacados.css
+++ b/assets/css/destacados.css
@@ -1,8 +1,8 @@
 .destaques {
   width: calc(100% - .6rem);
   display: grid;
-  grid-template-columns: 25% 25% 25% 25%;
-  grid-template-rows: 33.3% 33.3% 33.3%;
+  grid-template-columns: repeat(4, 25%);
+  grid-template-rows: repeat(3, 33.33%);
   height: calc(100vh - 50px);
   gap: .3rem;
 }
@@ -74,5 +74,36 @@
 .destaques__categorias___link {
   text-decoration: none;
   color: #333333;
+}
+
+@media only screen and (max-width: 600px) {
+  .destaques {
+    grid-template-columns: repeat(4, 25%);
+    grid-template-rows: repeat(5, 20%);
+  }
+  .destaques__principal {
+    grid-column: 1/5;
+    grid-row: 1/3;
+  }
+  .destaques__secundario:nth-child(2) {
+    grid-column: 1/3;
+    grid-row: 3/4;
+  }
+  .destaques__secundario:nth-child(3) {
+    grid-column: 3/5;
+    grid-row: 3/4;
+  }
+  .destaques__secundario:nth-child(4) {
+    grid-column: 1/3;
+    grid-row: 4/5;
+  }
+  .destaques__secundario:nth-child(5) {
+    grid-column: 3/5;
+    grid-row: 4/5;
+  }
+  .destaques__categorias {
+    grid-column: 1/5;
+    grid-row: 5/6;
+  }
 }
 
