--- a/assets/css/populares.css
+++ b/assets/css/populares.css
@@ -98,3 +98,40 @@
   justify-content: space-between;
   border-bottom: 1px solid #dcdcdc;
 }
+
+@media only screen and (max-width: 1025px) {
+  .populares__card:nth-child(4),
+  .populares__card:nth-child(5) {
+    display: none;
+  }
+  .populares__card {
+    width: calc(33.33% - 1.2rem);
+    margin: 1.5rem 1.2rem 1.2rem 0;
+  }
+  .populares__card:last-child {
+    margin: 1.5rem 0;
+  }
+}
+
+@media only screen and (max-width: 769px) {
+  .populares__card:nth-child(3) {
+    display: none;
+  }
+  .populares__card {
+    width: calc(50% - 1.2rem);
+    margin: 1.5rem 1.2rem 1.2rem 0;
+  }
+  .populares__card:last-child {
+    margin: 1.5rem 0;
+  }
+}
+
+@media only screen and (max-width: 485px) {
+  .populares__card {
+    width: 100%;
+    margin: 1.5rem 0;
+  }
+  .populares__card:last-child {
+    margin: 1.5rem 0;
+  }
+}
