--- a/assets/css/destacados.css
+++ b/assets/css/destacados.css
@@ -1,9 +1,9 @@
 .destaques {
-  width: calc(100% - .6rem);
+  width: calc(100% - .9rem);
+  height: calc(100vh - 67px);
   display: grid;
   grid-template-columns: repeat(4, 25%);
   grid-template-rows: repeat(3, 33.33%);
-  height: calc(100vh - 50px);
   gap: .3rem;
 }
 
@@ -14,6 +14,7 @@
 }
 
 .destaques__titulo {
+  font-size: 1rem;
   color: #fdfdfd;
   background: rgb(0,0,0,.5);
   width: 100%;
