--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,3 +84,10 @@ li a {
   padding: 1rem;
   text-align: center;
 }
+
+@media screen and (max-width: 450px) {
+  .menu__link {
+    padding: .5rem .5rem;
+    font-size: .8rem;
+  }
+}
